# seo-workbench

./: .gitignore  CLAUDE.md  LICENSE  README.md  SEO工具链协同工作流指南.md  Shopify-Hydrogen-Headless-SEO指南.md  Shopify从0到1-SEO建设进阶教程.md  setup.sh  从0到1新站SEO建设教程.md
claude-seo/: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  PRIVACY.md  README.md  claude-seo-v1.8.0-release.html  install.ps1  install.sh  pyproject.toml  requirements.txt  uninstall.ps1  uninstall.sh  video-script-v1.7.2.md  youtube-shorts-research.md
claude-seo/.claude-plugin/: marketplace.json  plugin.json
claude-seo/.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  release.yml
claude-seo/agents/: seo-cluster.md  seo-dataforseo.md  seo-drift.md  seo-ecommerce.md  seo-flow.md  seo-image-gen.md  seo-schema.md  seo-sxo.md  seo-visual.md
claude-seo/claude-seo-slides/: index.html  script.html  v190.html  youtube-description.md
claude-seo/docs/: ARCHITECTURE.md  COMMANDS.md  INSTALLATION.md  MCP-INTEGRATION.md  TROUBLESHOOTING.md
claude-seo/hooks/: hooks.json  validate-schema.py
claude-seo/scripts/: backlinks_auth.py  bing_webmaster.py  capture_screenshot.py  commoncrawl_graph.py  dataforseo_costs.py  dataforseo_normalize.py  drift_baseline.py  drift_compare.py  drift_history.py  drift_report.py  fetch_page.py  google_auth.py  google_report.py  keyword_planner.py  moz_api.py  nlp_analyze.py  parse_html.py  release_report.py  sync_flow.py  validate_backlink_report.py  verify_backlinks.py
claude-seo/skills/seo/: SKILL.md
claude-seo/tests/: test_sync_flow.py
(+263 files in other folders)
